--- a/style/style.css
+++ b/style/style.css
@@ -9,9 +9,26 @@ body {
   height: 60px;
   background-color: #ffd63a;
   border-radius: 0px 0px 50px 50px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+}
+.opcoes_menu {
+  margin-left: 70px;
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+.opcoes_menu a {
+  text-decoration: none;
+  color: #0000005e;
+  font-size: 25px;
+  font-weight: 700;
 }
 .conteudo {
-  height: 550px;
+  height: 610px;
   background-color: white;
 }
 .rodape {
