--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,9 @@ body {
 .rodape {
   height: 50px;
   background-color: #000000;
+  color: white;
+  text-align: center;
+  align-content: center;
 }
 /* PALETAS DE CORES
 #6DE1D2
