--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -5,7 +5,6 @@ img {
   border: 5px solid #ffffff;
 }
 .conteudo {
-  height: 550px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -33,4 +32,34 @@ img {
   margin-bottom: 30px;
   font-size: 30px;
   text-align: center;
+}
+.avatar button {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  background: none;
+  border: none;
+  cursor: pointer;
+  box-shadow: 5px 5px 5px #000000a9;
+}
+.avatar button:hover {
+  box-shadow: 10px 10px 20px #ffffff;
+}
+@keyframes sobe_e_desce {
+  0% { top: 210px; }
+  100% { top: 350px; }
+}
+.div_botao_jogar{
+  width: 250px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.div_botao_jogar button {
+  background: none;
+  border: none; 
+  position: absolute; 
+  animation: sobe_e_desce 2s infinite alternate;
 }
